samples/_failures_safe/1761041949_86f4ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cdec84f.c: In function ‘dfs’:
./samples/SAFE/__tmp_8cdec84f.c:163:22: error: expected ‘;’ at end of input
  163 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_8cdec84f.c:163:5: error: expected declaration or statement at end of input
  163 |     for (int i = 0; i
      |     ^~~
